--- a/phpapp/Dockerfile
+++ b/phpapp/Dockerfile
@@ -1,8 +1,13 @@
 FROM php:7.4-apache
+#os install tools
 RUN apt-get update
 RUN apt-get install -y wget vim zip unzip libzip-dev libpng-dev
-RUN docker-php-ext-install -j$(nproc) mysqli pdo_mysql gd zip pcntl exif
+
+#php extensions
+RUN docker-php-ext-install -j$(nproc) mysqli pdo_mysql gd zip pcntl
+#apache modules
 RUN a2enmod headers expires rewrite
+#working directory
 WORKDIR /var/www/html
 COPY . .
 EXPOSE 85
