--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,9 +11,9 @@ phases:
     - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/s5o7d0z2
     
     - docker tag mysqldockimage public.ecr.aws/s5o7d0z2/ak-phpmysql:latest/mysql
-    - docker tag phpimage public.ecr.aws/s5o7d0z2/ak-phpmysql:latest/php
-    - docker push public.ecr.aws/s5o7d0z2/ak-phpmysql:latest/php
-    - docker push public.ecr.aws/s5o7d0z2/ak-phpmysql:latest/mysql
+    - docker tag phpimage public.ecr.aws/s5o7d0z2/ak-phpmysql:latest/phpimage
+    - docker push public.ecr.aws/s5o7d0z2/ak-phpmysql:latest/phpimage
+    - docker push public.ecr.aws/s5o7d0z2/ak-phpmysql:latest/mysqlimage
   post_build:
     commands:
     - echo Build completed on `date`
