--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ phases:
   pre_build:
     commands:
     - echo PRE BUILD PHASE
+    - echo $dockerpass | docker login --username $dockeruser --password-stdin 
   build:
     commands:
     - echo Build started on `date`
