--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,4 +24,5 @@ phases:
     - printf '[{"name":"phpcontainer","imageUri":"public.ecr.aws/s5o7d0z2/ak-phpmysql:phpimage"},\n{"name":"mysqlcontainer","imageUri":"public.ecr.aws/s5o7d0z2/ak-phpmysql:mysql"}]' > imagedefinitions.json
   artifacts:
     files:
-     - imagedefinitions.json
+    - 'imagedefinitions.json'
+   
